# argus

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
docs/plans/: local-multi-agent-system.md
docs/wiki/: Home.md
frontend/: index.html  package.json
frontend/src/: App.tsx
frontend/src/api/: agno.ts
frontend/src/components/: ChatInput.tsx  ChatWindow.tsx  CodeBlock.tsx  MessageBubble.tsx  MessageList.tsx  ToolCallCard.tsx
frontend/src/hooks/: useChat.ts
frontend/src/styles/: globals.css
frontend/src/types/: chat.ts
src/argus/: __init__.py  app.py  config.py  feedback.py  models.py  tracing.py
src/argus/agents/: __init__.py  researcher.py  writer.py
src/argus/teams/: __init__.py  content.py
src/argus/tools/: __init__.py  research.py  writing.py
tests/: conftest.py
tests/test_agents/: test_researcher.py  test_writer.py
tests/test_teams/: test_content.py
