[project]
name = "argus"
version = "0.1.0"
description = "Local multi-agent system powered by Agno and Ollama"
requires-python = ">=3.13"
dependencies = [
    "agno[os]>=2.5.0",
    "langfuse>=2.0.0",
    "ollama>=0.4.0",
    "openai>=1.0.0",
    "pydantic-settings>=2.0.0",
    "requests>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.2.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.8.0",
    "mypy>=1.10.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 80
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-v",
    "-ra",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
fail_under = 90.0
